--- a/Source/CriticalPath.Web/Web.config
+++ b/Source/CriticalPath.Web/Web.config
@@ -9,9 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="IdentityConnection"
-         connectionString="Data Source=.\SqlExpress;Initial Catalog=CriticalPathIdentity;Integrated Security=True"
-         providerName="System.Data.SqlClient" />
+    <add name="IdentityConnection" connectionString="Data Source=.\SqlExpress;Initial Catalog=CriticalPathIdentity;Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="CriticalPathContext" connectionString="metadata=res://*/CriticalPathModel.csdl|res://*/CriticalPathModel.ssdl|res://*/CriticalPathModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SqlExpress;initial catalog=CriticalPath;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
