--- a/Source/CriticalPath.Web/CriticalPath.Web.csproj
+++ b/Source/CriticalPath.Web/CriticalPath.Web.csproj
@@ -177,6 +177,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\AdmPanelController.cs" />
     <Compile Include="Controllers\BaseController.g.cs" />
     <Compile Include="Controllers\BaseController.part.cs" />
     <Compile Include="Controllers\ContactsController.g.cs" />
@@ -197,7 +198,7 @@
     <Compile Include="Controllers\ProcessTemplatesController.part.cs" />
     <Compile Include="Controllers\ProductCategoriesController.g.cs" />
     <Compile Include="Controllers\ProductCategoriesController.part.cs" />
-    <Compile Include="Controllers\AdmPanelController.cs" />
+    <Compile Include="Controllers\AdmPanelController.seed.cs" />
     <Compile Include="Controllers\ProductsController.g.cs" />
     <Compile Include="Controllers\ProductsController.part.cs" />
     <Compile Include="Controllers\PurchaseOrdersController.g.cs" />
@@ -207,7 +208,9 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\AppSettings.cs" />
     <Compile Include="Models\SecurityRoles.g.cs" />
+    <Compile Include="Models\SelectThemeVM.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -276,6 +279,7 @@
     <Content Include="Content\themes\dark-hive\jquery-ui.css" />
     <Content Include="Content\themes\dark-hive\jquery-ui.min.css" />
     <Content Include="Content\themes\dark-hive\theme.css" />
+    <Content Include="Content\tools.css" />
     <Content Include="favicon.ico" />
     <Content Include="Content\fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -411,10 +415,10 @@
     <Content Include="Views\PurchaseOrders\Details.cshtml" />
     <Content Include="Views\PurchaseOrders\Edit.cshtml" />
     <Content Include="Views\PurchaseOrders\Index.cshtml" />
+    <Content Include="Views\AdmPanel\SelectTheme.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Views\AdmPanel\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
